kitten/reported_bugs/c/c-100526/stderr.txt
mutant.c:1:5: error: ‘__GIMPLE’ only valid with ‘-fgimple’

    1 | int __GIMPLE foo ( int a )

      |     ^~~~~~~~

mutant.c: In function ‘foo’:

mutant.c:2:12: error: expected identifier or ‘(’ before ‘;’ token

    2 | { enum tst ;

      |            ^

mutant.c:2:12: internal compiler error: Segmentation fault

0xef7273 crash_signal

	/tmp/tmp.FUbEknNORK-gcc-builder/gcc/gcc/toplev.c:327

0x9528a8 c_parser_gimple_declaration

	/tmp/tmp.FUbEknNORK-gcc-builder/gcc/gcc/c/gimple-parser.c:2049

0x9528a8 c_parser_gimple_compound_statement

	/tmp/tmp.FUbEknNORK-gcc-builder/gcc/gcc/c/gimple-parser.c:391

0x954fa7 c_parser_parse_gimple_body(c_parser*, char*, c_declspec_il, profile_count)

	/tmp/tmp.FUbEknNORK-gcc-builder/gcc/gcc/c/gimple-parser.c:253

0x944187 c_parser_declaration_or_fndef

	/tmp/tmp.FUbEknNORK-gcc-builder/gcc/gcc/c/c-parser.c:2533

0x94b9d3 c_parser_external_declaration

	/tmp/tmp.FUbEknNORK-gcc-builder/gcc/gcc/c/c-parser.c:1777

0x94c439 c_parser_translation_unit

	/tmp/tmp.FUbEknNORK-gcc-builder/gcc/gcc/c/c-parser.c:1650

0x94c439 c_parse_file()

	/tmp/tmp.FUbEknNORK-gcc-builder/gcc/gcc/c/c-parser.c:21984

0x9ac765 c_common_parse_file()

	/tmp/tmp.FUbEknNORK-gcc-builder/gcc/gcc/c-family/c-opts.c:1218

Please submit a full bug report,

with preprocessed source if appropriate.

Please include the complete backtrace with any bug report.

See <https://gcc.gnu.org/bugs/> for instructions.

